--- a/project/src/components/loading-screen/loading-screen.css
+++ b/project/src/components/loading-screen/loading-screen.css
@@ -1,22 +1,44 @@
-.fetching {
-  width: 100px;
-  height: 100px;
-  margin: 30vh auto;
-  border: 4px dashed #4481c3;
-  border-radius: 100%;
-  animation-name: search-fetching;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
+.loader-wrapper {
+  width: 500px;
+  height: 500px;
 }
 
-@keyframes search-fetching {
+.loader {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border: 50px solid #162534;
+  border-top-color: #4bc8eb;
+  border-bottom-color: #f13a8f;
+  border-radius: 50%;
+  animation: rotate 5s linear infinite;
+}
+
+.loader-inner {
+  border-top-color: #36f372;
+  border-bottom-color: white;
+  animation-duration: 2s;
+}
+
+.loader-wrapper-bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+@keyframes rotate {
   0% {
-      transform: rotate(0deg);
+    transform: scale(1) rotate(360deg);
+  }
+
+  50% {
+    transform: scale(0.8) rotate(-360deg);
   }
 
   100% {
-      transform: rotate(360deg) scale(1.3);
+    transform: scale(1) rotate(360deg);
   }
 }
+
